# CMakeLists.txt to build examples/CCallbackHelix

INCLUDE_DIRECTORIES( ${DTK_SOURCE_DIR}/include ${DGL_SOURCE_DIR}/include
		${PRODUCER_INCLUDE_DIR} ${OPENTHREADS_INCLUDE_DIR}
		${GLX_HEADER_PATH} )
ADD_EXECUTABLE( helix helix.cpp )
TARGET_LINK_LIBRARIES( helix dgl )
SET_TARGET_PROPERTIES( helix PROPERTIES LINK_FLAGS ${DGL_LIB_FLAGS} )

